# locate-cargo-manifest

./: Cargo.toml  Changelog.md
src/: lib.rs
