[package]
name = "locate-cargo-manifest"
version = "0.2.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Retrieves the Cargo manifest path by parsing the output of `cargo locate-project`."

[dependencies]
json = "0.12.4"
thiserror = "1.0.16"
