[package]
name = "locate-cargo-manifest"
version = "0.2.2"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Retrieves the Cargo manifest path by parsing the output of `cargo locate-project`."

[dependencies]
json = "0.12.4"

[package.metadata.release]
no-dev-version = true
pre-release-replacements = [
    { file="Changelog.md", search="# Unreleased", replace="# Unreleased\n\n# {{version}} – {{date}}", exactly=1 },
]
pre-release-commit-message = "Release version {{version}}"
